tests/NormalTests/paczka1/fuzzy1/34038664.err
Error in line 4: eMDnH S694 286,90
Error in line 3: stNDrQhb A280 16,4
Error in line 20: aadUOzU A958 81,0
Error in line 29: dD4jD084 A456 32,32
Error in line 17: stNDrQhb S694 28,7
Error in line 21: aadUOzU S694 33,9
